# humanoid_ubtech_walker_s2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  README_zh.md  export_walker_s2_usd.sh  record_part_sorting.sh  record_walker_grasp.sh  run.sh  setup.py  teleop_part_sorting.sh  teleop_walker_grasp.sh
Ubtech_sim/: main.py
Ubtech_sim/config/: Conveyor_Sorting.yaml  Foam_Inlaying.yaml  Part_Sorting.yaml
Ubtech_sim/source/: DualArmIK.py  RobotArticulation.py  SceneBuilder.py  coordinate_utils.py  grasp_planner.py
WalkerS2-Model/ubt_hand_v3/ubt_left_hand_v3_description/: CMakeLists.txt  package.xml
WalkerS2-Model/ubt_hand_v3/ubt_left_hand_v3_description/config/rviz/: view_robot.rviz
WalkerS2-Model/ubt_hand_v3/ubt_left_hand_v3_description/launch/: display.launch.py
WalkerS2-Model/ubt_hand_v3/ubt_right_hand_v3_description/: CMakeLists.txt  package.xml
WalkerS2-Model/walker_s2_description/walker_s2_description/: CMakeLists.txt  package.xml
WalkerS2-Model/walker_s2_description/walker_s2_description/config/: view_robot.rviz
WalkerS2-Model/walker_s2_description/walker_s2_description/launch/: display.launch.py
WalkerS2-Model/walker_s2_description/walker_s2_description/meshes/s2/: L_hand_link.STL  R_hand_link.STL
WalkerS2-Model/walker_s2_description/walker_s2_description/urdf/s2/: s2.urdf
WalkerS2-Model/walker_s2_official/: walker_s2.urdf  walker_s2_isaac_simple_hand_collision.urdf
assets/resources/walker_s2_description_hand3_v1_left_hand3_v1_right/: walker_s2_description_hand3_v1_left_hand3_v1_right.urdf  walker_s2_description_hand3_v1_left_hand3_v1_right_isaac_simple_hand_collision.urdf  walker_s2_with_hands_isaaclab.usd
checkpoints/walker_s2_bc/single_demo_phase_processed/: best.pt  metadata.json
demos/walker_s2_pick_place_success/: walker_s2_pick_place_ep000_20260714_161434.npz
demos/walker_s2_pick_place_success_random/: walker_s2_pick_place_ep000_20260714_163944.npz  walker_s2_pick_place_ep000_20260714_171233.npz  walker_s2_pick_place_ep000_20260714_172248.npz  walker_s2_pick_place_ep000_20260714_172642.npz  walker_s2_pick_place_ep000_20260714_173649.npz  walker_s2_pick_place_ep001_20260714_171307.npz  walker_s2_pick_place_ep001_20260714_172718.npz  walker_s2_pick_place_ep001_20260714_173718.npz  walker_s2_pick_place_ep002_20260714_171334.npz  walker_s2_pick_place_ep003_20260714_171357.npz  walker_s2_pick_place_ep004_20260714_171418.npz
isaaclab_walker_s2/: __init__.py  walker_s2_cfg.py
isaaclab_walker_s2/tasks/: __init__.py
isaaclab_walker_s2/tasks/pick_place/: __init__.py  actions.py  mdp.py  walker_s2_pick_place_env_cfg.py
scripts/: eval_walker_s2_act.py  eval_walker_s2_bc.py  export_walker_s2_usd.py  generate_walker_s2_cartesian_teacher_demos.py  import_walker_s2.py  import_walker_s2_urdf.py  isaac_walker_fixed_grasp_demo.py  merge_walker_s2_ubt_hand_v3.py  replay_walker_s2_ik_demo.py  replay_walker_s2_ik_grasp_env.py  setup_official_walker_s2.py  spawn_walker_s2_isaaclab.py  spawn_walker_s2_table_scene.py  teleop_walker_s2_ik_env.py  test_walker_s2_ik_action_env.py  test_walker_s2_pick_place_env.py  test_walker_s2_registered_ik_action_env.py  test_walker_s2_registered_task.py  train_walker_s2_act.py  train_walker_s2_bc.py  train_walker_s2_bc_prior_ppo.py  train_walker_s2_rsl_rl.py  walker_s2_act_common.py  walker_s2_cartesian_teacher.py
src/lerobot/: __init__.py
src/lerobot/async_inference/: configs.py  helpers.py  policy_server.py  robot_client.py
src/lerobot/cameras/: utils.py
src/lerobot/configs/: default.py  eval.py  parser.py  policies.py  train.py
src/lerobot/datasets/: aggregate.py  compute_stats.py  dataset_tools.py  factory.py  (+6 more)
src/walker_s2_grasp_sim/: __init__.py  cartesian_controller.py  keyboard.py  recording.py
(+261 files in other folders)
