<package format="3">
  <name>ubt_left_hand_v3_description</name>
  <version>0.0.1</version>
  <description>ubt_left_hand_v3_description</description>

  <maintainer email="zzz@ubtrobot.com">zzz</maintainer>

  <license>Apache License 2.0</license>

  <!-- 构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 执行依赖 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdfdom</exec_depend>


  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- 如果使用launch文件需要添加 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <urdf>urdf/hand3_v1.urdf</urdf> 
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <resource_path>meshes</resource_path> 
  </export>
</package>
